--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
             <a href="#" class="link">4</a>
         </nav>
     </body>
-    <script src="js/main.js"></script>
+<!--    <script src="js/main.js"></script>-->
 </html>
